# aoc2025

./: .clang-format  CMakeLists.txt  README.md  pixi.toml
.zed/: settings.json
common/: args.hpp  common.hpp  reader.hpp
day0/: main.cpp
day1/: main.cpp  simple.txt
day2/: main.cpp
day3/: main.cpp
day4/: main.cpp
day5/: main.cpp
day6/: main.cpp
template/: main.cpp
